with video background

--- a/secondPage.html
+++ b/secondPage.html
@@ -9,6 +9,10 @@
 
 </head>
 <body>
+<div class="video">
+    <video autoplay loop muted>
+        <source src="video/9kA5.mp4">
+    </video>
 <header>
     <div class="logo">
         <a href="#"><img src="img/KolosRPLogo.png" alt=""></a>
