--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="styles/animations.css">
     <link rel="shortcut icon" type="image/jpg" href="img/KolosRPLogo.png"/>
 </head>
-<body>
-<div class="video">
-    <video autoplay loop muted>
-        <source src="video/9kA5.mp4">
-    </video>
+<body background="img/photo_2024-01-23%2019.13.34.jpeg">
+
 </div>
 <header>
     <div class="logo">
@@ -35,6 +32,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad adipisci consequatur dolorum ea error explicabo ipsam itaque, iusto repellendus sunt vero? Expedita provident repudiandae tempora. Ad aliquam atque debitis deleniti, deserunt itaque labore minima molestias officiis possimus quam quisquam quo sequi similique ullam vel voluptatibus! Est ipsam maxime ut.</p>
     </div>
     <button class="more"><a href="secondPage.html"><p>Дізнатись більше</p></a></button>
+
 </main>
 
 <footer>
