with video background

--- a/index.html
+++ b/index.html
@@ -7,36 +7,40 @@
     <link rel="stylesheet" href="styles/animations.css">
     <link rel="shortcut icon" type="image/jpg" href="img/KolosRPLogo.png"/>
 </head>
-<body background="img/photo_2024-01-23%2019.13.34.jpeg">
+<body>
+<div class="video">
+    <video autoplay loop muted>
+        <source src="video/9kA5.mp4">
+    </video>
+</div>
 <header>
     <div class="logo">
         <a href="#"><img src="img/KolosRPLogo.png" alt=""></a>
     </div>
-<nav>
-    <div class="drop">
-        <button class="nav-btn-brg">
-            &#9776;
-        </button>
-        <div class="text-nav">
-            <a href="#"><p>About Us</p></a>
-            <a href="https://t.me/kolos_roleplay"> <p>Telegram</p></a>
+    <nav>
+        <div class="drop">
+            <button class="nav-btn-brg">
+                &#9776;
+            </button>
+            <div class="text-nav">
+                <a href="#"><p>About Us</p></a>
+                <a href="https://t.me/kolos_roleplay"> <p>Telegram</p></a>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 </header>
 <main>
     <div class="mainWelcome">
-    <img class="welcome" src="img/Welcome.jpeg">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad adipisci consequatur dolorum ea error explicabo ipsam itaque, iusto repellendus sunt vero? Expedita provident repudiandae tempora. Ad aliquam atque debitis deleniti, deserunt itaque labore minima molestias officiis possimus quam quisquam quo sequi similique ullam vel voluptatibus! Est ipsam maxime ut.</p>
+        <img class="welcome" src="img/Welcome.jpeg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ad adipisci consequatur dolorum ea error explicabo ipsam itaque, iusto repellendus sunt vero? Expedita provident repudiandae tempora. Ad aliquam atque debitis deleniti, deserunt itaque labore minima molestias officiis possimus quam quisquam quo sequi similique ullam vel voluptatibus! Est ipsam maxime ut.</p>
     </div>
     <button class="more"><a href="secondPage.html"><p>Дізнатись більше</p></a></button>
-
 </main>
 
 <footer>
     <hr align='center'>
     <div class="info">
-    <p class="rights">All rights reserved 2024</p>
+        <p class="rights">All rights reserved 2024</p>
     </div>
 </footer>
 </body>
