--- a/secondPage.html
+++ b/secondPage.html
@@ -8,8 +8,12 @@
     <link rel="shortcut icon" type="image/jpg" href="img/KolosRPLogo.png"/>
 
 </head>
-<body background="img/photo_2024-01-23%2019.13.34.jpeg">
-
+<body>
+<div class="video">
+    <video autoplay loop muted>
+        <source src="video/9kA5.mp4">
+    </video>
+</div>
 <header>
     <div class="logo">
         <a href="#"><img src="img/KolosRPLogo.png" alt=""></a>
@@ -32,13 +36,14 @@
         <img class="welcome" src="img/Vitya.jpeg">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores atque dicta dolorem dolores excepturi facilis incidunt itaque iusto laborum necessitatibus odit pariatur perferendis porro possimus quae quasi quos reiciendis, ut velit vitae! Accusamus alias, blanditiis consequuntur doloremque eaque, facere fuga iusto necessitatibus praesentium quaerat sapiente veritatis? Cum ducimus error obcaecati perspiciatis quis reprehenderit veritatis! Ab amet atque dolor dolorem, dolorum enim esse facere illum inventore laboriosam laborum officia pariatur praesentium quidem, quo reprehenderit saepe voluptate. Accusantium aliquam aut beatae consectetur culpa cumque deserunt eaque earum enim eos error in laboriosam modi, molestiae nam nisi nostrum nulla officia perspiciatis rerum, sed soluta ullam velit. Accusantium commodi corporis culpa doloribus ducimus eius, exercitationem fugiat illo ipsam iusto nemo nihil numquam pariatur perferendis soluta? Ab commodi mollitia numquam optio soluta? Ab ad aut commodi culpa eaque excepturi hic id laudantium, optio provident quidem quos saepe sapiente sequi suscipit vitae, voluptatem voluptatum. Aliquid, magni?</p>
     </div>
+
 </main>
 
-    <footer>
-        <hr align='center'>
-        <div class="info">
-            <p class="rights">All rights reserved 2024</p>
-        </div>
-    </footer>
+<footer>
+    <hr align='center'>
+    <div class="info">
+        <p class="rights">All rights reserved 2024</p>
+    </div>
+</footer>
 </body>
 </html>
