with video background

--- a/secondPage.html
+++ b/secondPage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="video">
-    <video autoplay loop muted>
+    <video autoplay loop>
         <source src="video/9kA5.mp4">
     </video>
 </div>
