--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="video">
-    <video autoplay loop muted>
+    <video autoplay loop>
         <source src="video/9kA5.mp4">
     </video>
 </div>
