--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="video">
-    <video autoplay loop>
-        <source src="video/9kA5.mp4">
+    <video autoplay loop preload="auto" playsinline>
+        <source src="video/9kA5.mp4" type="video/mp4">
     </video>
 </div>
 <header>
