--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <div class="video">
     <video autoplay loop preload="auto" playsinline>
         <source src="video/9kA5.mp4" type="video/mp4">
+        <source src="video/9kA5.webm" type="video/mp4">
+        <source src="video/9kA5.ogv" type="video/mp4">
     </video>
 </div>
 <header>
