with video background

--- a/secondPage.html
+++ b/secondPage.html
@@ -11,9 +11,7 @@
 <body>
 <div class="video">
     <video autoplay loop preload="auto" playsinline>
-        <source src="video/9kA5.mp4" type="video/mp4">
-        <source src="video/9kA5.webm" type="video/mp4">
-        <source src="video/9kA5.ogv" type="video/mp4">
+        <source src="video/hack.mp4" type="video/mp4">
     </video>
 </div>
 <header>
