--- a/secondPage.html
+++ b/secondPage.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="video">
-    <video autoplay loop preload="auto" playsinline>
+    <video autoplay loop preload="auto" playsinline muted>
         <source src="video/hack.mp4" type="video/mp4">
     </video>
 </div>
